-- メッセージファイルが存在する場合は、Ethna 組み込みのメッセージカタログの場合は、既存の翻訳
   を自動的にマージする。gettext の場合は、新たにファイルを生成し、msgmerge プログラムを使って
   翻訳を既存のものとマージするように促す
- 配布する Smarty を 2.6.20 に追随
- [Breaking B.C] 互換性を保つために残されていた内部メソッドを削除
-- Ethna_ViewClass#_getTemplateEngine
- Ethna_ActionClass のメンバに $logger(Ethna_Logger) を追加
- Ethna_ViewClass のメンバに $ctl(Ethna_Controller) を追加
-- i18n 周りの情報を容易に変更させるようにするため

*** bug fix

- テストディレクトリの変更のタイミングによっては、Ethna_UnitTestMangerがWARNINGを出す問題を回避 (thanks: maru_cc)
- selected="selected" の修正漏れを修正 (thanks:maru_cc) 
- [Breaking B.C] Ethna_Plugin_CacheManager_Memcache の接続デフォルトが persistent になっていたのを通常接続に変更
-- [appid]/etc/[appid]-ini.php の memcache_use_connect 設定を memcache_use_pconnect に変更
- プラグインのクラス名にアンダーバーを許していなかったが、PHPのクラス名的に正当な文字であればOKにするように変更(thanks:maru_cc)
- Ethna_I18N.php で、メッセージをパースする際に空行を見逃していたバグを修正
- Ethna_MailSender にてメールを送信する際、テンプレートが存在しなかった場合にも空メールを送ってしまうバグを修正 (thanks: ryosuke@sekido.info -> [ethna-users:1053])
- smarty_modifier_checkbox が仕様に反する動作をしていたバグを修正し、仕様を厳密化した(thanks: maru_cc)
-- checked が付くのはスカラーで、0 と空文字列、null, false 以外の場合とする 
- Ethna_ActionError#_getActionForm で、E_NOTICE が出る問題を回避

** 2.5.0-preview1

*** features

- ソースコード全体をUTF-8化
-- 但し、日本語のソースコードコメントはそのまま
-- [Breaking B.C] フレームワークで扱う内部エンコーディング(mb_internal_encoding)もデフォルトはUTF-8に変更。但し、これは Ethna_Controller#_getDefaultLanguage
   をオーバーライドし、クライアントエンコーディングの値を変えることで変更可能です。
-- 内部エンコーディングの変更に伴い、動作しなくなった箇所を修正
--- Ethna_Plugin_Validator_Min.php
--- Ethna_Plugin_Validator_Max.php
--- VAR_TYPE_STRING の場合の、最大値最小値のプラグインを再編し、
    マルチバイトのものとそうでないものを分離。互換性確保用途のプラグインも追加
---- Ethna_Plugin_Validator_MbStrMax.php     (マルチバイト文字列最大値)
---- Ethna_Plugin_Validator_MbStrMin.php     (マルチバイト文字列最小値)
---- Ethna_Plugin_Validator_StrMax.php       (シングルバイト文字列最大値)
---- Ethna_Plugin_Validator_StrMin.php       (シングルバイト文字列最小値)
---- Ethna_Plugin_Validator_StrMaxCompat.php (2.3.x までの互換性確保用)
---- Ethna_Plugin_Validator_StrMinCompat.php (2.3.x までの互換性確保用)
-- 内部エンコーディングの変更に伴う動作の変更